# GaitTest

./: .C3D.md  .env  COMO_FUNCIONA.md  CREATE_TABLES.sql  KINEMATIC_IMPLEMENTATION_REPORT.md  MIGRATION_AUTH_PERSISTENCE.sql  MI_DISEÑO_VS_GAIT_TEST.md  OVERVIEW.md  PRIORITY_ROADMAP.md  README.md  SETUP_INSTRUCTIONS.md  SUPABASE_INTEGRATION.md  SYSTEM_ANALYSIS.md  database_setup.sql  index.html  package-lock.json  package.json  playwright.config.ts  verify-supabase.js  vite.config.ts
.claude/: settings.local.json
e2e/: full-flow.pw.ts  longitudinal.pw.ts
e2e/fixtures/: README.md
reference/exports/: EVENTS_QA_CHECKLIST.md  README.md
reference/freemocap/: 01_ARCHITECTURE_OVERVIEW.md  02_IMAGE_TRACKING_2D_DETECTION.md  03_TRIANGULATION_3D.md  04_POST_PROCESSING.md  05_ANATOMICAL_CALCULATIONS.md  06_DATA_FORMATS_AND_OUTPUT.md  07_GAIT_ANALYSIS_RELEVANCE.md  08_KEY_SOURCE_CODE.md  09_INTEGRATION_WITH_GAITTEST.md  10_C3D_EXPORT_REFERENCE.md
services/c3d-exporter/: Dockerfile  README.md  pyproject.toml
services/c3d-exporter/app/: __init__.py  auth.py  c3d_builder.py  main.py  models.py
services/c3d-exporter/tests/: test_c3d_builder.py
src/: App.css  App.tsx  index.css  main.tsx
src/components/: AuthGuard.tsx  CalibrationCanvas.tsx  ClinicalExportPanel.tsx  GaitPhaseDiagram.tsx  KinematicChartCanvas.tsx  LiveHeightOverlay.tsx  LongitudinalAnalysis.tsx  OGSInput.tsx  OGSValidationPanel.tsx  PatientBiometricsForm.tsx  PatientSearch.tsx  PhaseHeatmap.tsx  PoseOverlay.tsx  SymmetryRadarChart.tsx
src/hooks/: useAuth.ts  useKinematicAnalysis.ts  useMediaRecorder.ts  (+3 more)
(+88 files in other folders)
